# apple-compose

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
docs/: commands.md
src/apple_compose/: __main__.py  application.py  cli.py  container_cli.py  dns.py  env.py  errors.py  labels.py  main.py  planner.py  runtime.py  volumes.py
src/apple_compose/commands/: __init__.py  common.py
src/apple_compose/commands/build_/: main.py
src/apple_compose/commands/config/: main.py
src/apple_compose/commands/down/: main.py
src/apple_compose/models/: __init__.py  build.py  compose.py  constants.py  container.py  deploy.py  network.py  port.py  service.py  volume.py  yaml_loader.py
tests/: conftest.py  test_cli.py  test_compose_loader.py  test_container_cli.py  test_container_e2e.py  test_container_models.py  test_dns.py  test_env.py  test_networks.py  test_planner.py  test_ports.py  test_runtime.py  test_volumes.py
tests/test_data/compose/: config-summary.yaml  dependency-cycle.yaml  duplicate-image.yaml  e2e-basic.yaml  env-file-web.yaml  hidden-project-name.yaml  long-volume-syntax.yaml  named-web-nginx-alpine.yaml  planner-web-db-env-port.yaml  resource-limits.yaml  service-command-host-port.yaml  unknown-dependency.yaml  volumes-summary.yaml  web-db-depends.yaml
tests/test_data/container/: cli-db-running.json  cli-default-running.json  cli-labeled-apple-compose-db.json  cli-labeled-apple-compose-web-db.json  cli-labeled-apple-compose-web.json  cli-labeled-web-db.json  cli-labeled-web.json  cli-web-running.json  extract-configuration-ids.json  labeled-services.json  non-list.json  project-summaries.json  runtime-existing.json  runtime-running.json  snapshot-existing.json  snapshot-running.json
tests/test_data/env/: dotenv.env  service.env
(+19 files in other folders)
