[project]
name = "apple-compose"
version = "0.0.1"
description = "A Docker Compose-like CLI for Apple Containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "ruff>=0.15.14",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
apple-compose = "apple_compose.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
