[project]
name = "apple-compose"
version = "0.0.1"
description = "A Docker Compose-like CLI for Apple Containers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
apple-compose = "apple_compose.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
