[project]
name = "apple-compose"
version = "0.0.14"
description = "A Docker Compose-like CLI for Apple Containers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
apple-compose = "apple_compose.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_compose"]

[tool.hatch.build.targets.wheel.force-include]
"src/apple_compose/resources" = "apple_compose/resources"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
